--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li id="section-estadisticas"><a href="estadistica.html">Estadisticea</a></li>
         </ul>
     </nav>
-
+<!--ESTO ES UN TEXTO-->
     <main class="contenido" id="contenido">
         <section class="planillas">
     <div class="buscador">
