--- a/index.html
+++ b/index.html
@@ -6,21 +6,31 @@
     <title>Gestión de Planillas de Transformadores</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="FORMATO DE RETIRO/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js" defer></script>
 
 </head>
 <body>
+
     <header>
-        <h1>Gestión de Transformadores</h1>
+
+        <div>
+            <img src="imagenes/logo.png">
+        </div>
     </header>
+
+
 
     <nav>
         <ul>
-            <li id="crear-planilla-btn">Crear Planilla</li>
-            <li id="section-planillas"><a href="index.html">Planilla</a></li>
-            <li id="section-estadisticas"><a href="estadistica.html">Estadisticea</a></li>
+            <li id="crear-planilla-btn" class="boton-menu">Crear Planilla</li>
+            <li id="section-planillas" class="boton-menu">Planilla</li>
+            <li id="section-estadisticas" class="boton-menu">Estadistica</li>
         </ul>
     </nav>
-<!--ESTO ES UN TEXTO-->
+
+
+
+
     <main class="contenido" id="contenido">
         <section class="planillas">
     <div class="buscador">
@@ -493,7 +503,13 @@
 <div id="ventana-negra-planilla" class="planilla-hidden">
     <div id="contenedor-planilla-madre" class="planilla-hidden">
     <button id="cerrar-modal-planilla">X</button>
+
+
+
     <div class="contenido-planilla-madre-relleno"></div>
+
+
+    
     <div class="contenedor-planilla">    
          <div class="fila_1">
                 <div class="div1 fila_1__div1 bordear aliniar_fila_1">
