--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav>
         <ul>
             <li id="crear-planilla-btn" class="boton-menu">Crear Planilla</li>
-            <li id="section-planillas" class="boton-menu">Planilla</li>
+            <li id="section-planillas" class="boton-menu">Inicio</li>
             <li id="section-estadisticas" class="boton-menu">Estadistica</li>
         </ul>
     </nav>
